--- a/hebrew-support/gmayer-org-mode-web.css
+++ b/hebrew-support/gmayer-org-mode-web.css
@@ -1,5 +1,3 @@
-@import url(http://fonts.googleapis.com/earlyaccess/alefhebrew.css);
-
 body, p, table, tr, td {
   direction:rtl!important;
 }
@@ -25,7 +23,7 @@ body, p, table, tr, td {
 }
 
 body {
-  font-family: "Alef Hebrew", Helvetica, Arial, sans-serif;
+  font-family: sans-serif;
 }
 
 table, tr, td {
