--- a/hebrew-support/gmayer-org-mode-web.css
+++ b/hebrew-support/gmayer-org-mode-web.css
@@ -3,7 +3,8 @@ body, p, table, tr, td {
 }
 
 p {
-    font-family: "David Libre";
+    font-family: 'David Libre';
+    font-size: 24;
 }
 
 .ltr {
