--- a/hebrew-support/gmayer-org-mode-web.css
+++ b/hebrew-support/gmayer-org-mode-web.css
@@ -7,6 +7,11 @@ p {
     font-size: 24px;
 }
 
+.arabic {
+    font-family: 'Noto Naskh Arabic';
+    font-size: 24px;
+}
+
 .ltr {
   direction:ltr!important;
   text-align:left!important;
