--- a/hebrew-support/gmayer-org-mode-web.css
+++ b/hebrew-support/gmayer-org-mode-web.css
@@ -3,7 +3,7 @@ body, p, table, tr, td {
 }
 
 h1 {
-    font-family: 'Noto Sans Hebrew';
+    font-family: 'Secular One';
     font-size: 48px;
 }
 
