--- a/hebrew-support/gmayer-org-mode-web.css
+++ b/hebrew-support/gmayer-org-mode-web.css
@@ -23,11 +23,11 @@ p {
 }
 
 .arabic-head {
-    font-family: Aref Ruqaa, sans-serif;
+    font-family: 'Aref Ruqaa', sans-serif;
 }
 
 .arabic-text {
-    font-family: Amiri, serif;
+    font-family: 'Amiri', serif;
 }
 
 .ltr {
