--- a/hebrew-support/gmayer-org-mode-web.css
+++ b/hebrew-support/gmayer-org-mode-web.css
@@ -22,11 +22,11 @@ p {
     font-size: 28px;
 }
 
-.arabic-head {
+.ruqaa {
     font-family: 'Aref Ruqaa', sans-serif;
 }
 
-.arabic-text {
+.naskh {
     font-family: 'Amiri', serif;
 }
 
