--- a/hebrew-support/gmayer-org-mode-web.css
+++ b/hebrew-support/gmayer-org-mode-web.css
@@ -57,6 +57,7 @@ p {
     position: absolute;
     top: -0.3em;
     left: 0.05em;
+    color: 'red';
 }
 
 .marboutah {
@@ -66,7 +67,7 @@ p {
     content: 'ֵ';
     position: absolute;
     top: -0.8em;
-    left: 0.2em;
+    left: 0.15em;
 }
 
 .ltr {
