--- a/hebrew-support/gmayer-org-mode-web.css
+++ b/hebrew-support/gmayer-org-mode-web.css
@@ -58,6 +58,7 @@ p {
     position: absolute;
     top: -0.3em;
     left: 0.05em;
+    color: red;
 }
 
 .marboutah {
@@ -68,6 +69,7 @@ p {
     position: absolute;
     top: -0.8em;
     left: 0.2em;
+    color: red;
 }
 
 .ltr {
