--- a/hebrew-support/gmayer-org-mode-web.css
+++ b/hebrew-support/gmayer-org-mode-web.css
@@ -56,9 +56,9 @@ p {
     font-family: 'Noto Naskh Arabic', serif;
     content: 'ﹼ';
     position: absolute;
-    top: -0.3em;
-    left: 0.05em;
-    color: red;
+    top: -0.8em;
+    left: 0.1em;
+    color: blue;
 }
 
 .marboutah {
@@ -68,8 +68,8 @@ p {
     content: 'ֵ';
     position: absolute;
     top: -0.8em;
-    left: 0.2em;
-    color: red;
+    left: 0.15em;
+    color: blue;
 }
 
 .ltr {
