--- a/hebrew-support/gmayer-org-mode-web.css
+++ b/hebrew-support/gmayer-org-mode-web.css
@@ -56,9 +56,9 @@ p {
     font-family: 'Noto Naskh Arabic', serif;
     content: 'ﹼ';
     position: absolute;
-    top: -0.4em;
+    top: -0.5em;
     left: 0.1em;
-    color: green;
+    color: red;
 }
 
 .marboutah {
@@ -69,7 +69,7 @@ p {
     position: absolute;
     top: -0.8em;
     left: 0.15em;
-    color: green;
+    color: red;
 }
 
 .ltr {
