--- a/hebrew-support/gmayer-org-mode-web.css
+++ b/hebrew-support/gmayer-org-mode-web.css
@@ -19,6 +19,11 @@ h3 {
     font-size: 36px;
 }
 
+h4 {
+    font-family: sans-serif;
+    font-size: 32px;
+}
+
 li, ul, p, table, tr, td {
     font-family: 'David Libre';
     font-size: 28px;
@@ -32,7 +37,7 @@ ul li::marker {
 }
 
 ul ul li::marker {
-  content: "☜ ";
+  content: "◀ ";
   color: orange;
 }
 
